2010-07-09 Braden McDaniel  <braden@endoframe.com>

	* src/node/vrml97/image_texture.cpp
	(image_texture_node::do_render_texture(openvrml::viewer &)): Lock
	the image_mutex_ before rendering the texture.

2010-06-06 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/x3d_vrml_grammar.h: Added MFDouble
	parsing.

2010-06-02 Braden McDaniel  <braden@endoframe.com>

	Updates for 0.18.6 release.

	* README
	* NEWS
	* configure.ac
	* doc/Doxyfile
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc
	* src/Makefile.am
	(LIBOPENVRML_LIBRARY_VERSION): Update to 9:4:0.

2010-05-28 Braden McDaniel  <braden@endoframe.com>

	Use jpeg_decompress_struct.out_color_components to determine the
	scan line buffer size.  This addresses a memory corruption issue
	when reading grayscale JPEGs.

	* src/node/vrml97/image_stream_listener.cpp
	(openvrml_node_vrml97::image_stream_listener::jpeg_reader::do_read(const
	std::vector<unsigned char> &)): Use
	jpeg_decompress_struct.out_color_components to determine the scan
	line buffer size.  This member isn't set until after the call to
	jpeg_start_decompress; so move the buffer allocation to the
	start_decompress section.

2010-05-27 Braden McDaniel  <braden@endoframe.com>

	FcFini cannot be called safely from library code.  Calling it is
	not a strict requirement; though it does clean up valgrind
	results.  To this end, call it from sdl-viewer instead.

	* examples/Makefile.am
	(sdl_viewer_CXXFLAGS): Add FONTCONFIG_CFLAGS.
	(sdl_viewer_LDFLAGS): Add FONTCONFIG_LIBS.
	* examples/sdl_viewer.cpp
	(main(int, char *[])): Call FcFini on shutdown if built with
	OPENVRML_ENABLE_RENDER_TEXT_NODE.
	* src/node/vrml97/text.cpp
	(openvrml_node_vrml97::text_metatype::text_metatype(openvrml::browser&)):
	It's safe to call FcInit redundantly.