@@ -1,5 +1,11 @@
 2010-07-09 Braden McDaniel  <braden@endoframe.com>
 
+	* src/libopenvrml/openvrml/local/parse_vrml.h
+	(openvrml::local::x3d_vrml_parse_actions::on_mfdouble): Added
+	semantic action for mfdouble.
+
+2010-07-09 Braden McDaniel  <braden@endoframe.com>
+
 	* src/node/vrml97/image_texture.cpp
 	(image_texture_node::do_render_texture(openvrml::viewer &)): Lock
 	the image_mutex_ before rendering the texture.
